--- a/Desafio 1/Desafio_1.ipynb
+++ b/Desafio 1/Desafio_1.ipynb
@@ -2,6 +2,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/hernancontigiani/ceia_memorias_especializacion/raw/master/Figures/logoFIUBA.jpg\" width=\"500\" align=\"center\">\n",
+        "\n",
+        "# Desafío 1\n",
+        "\n",
+        "# ¡Listo para corregir!\n",
+        "\n",
+        "## Alumno\n",
+        "Denardi, Fabricio\n",
+        "\n",
+        "## Cohorte\n",
+        "15-2024"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "zq6j8LsYq1Dr"
       },
@@ -2539,7 +2556,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.14"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
