Mejoras a los modelos y más conclusiones

--- a/Desafio 3/Desafio_3.ipynb
+++ b/Desafio 3/Desafio_3.ipynb
@@ -23,7 +23,7 @@
     "Fue dividido en 2 notebooks para facilitar su lectura y correción.\n",
     "\n",
     "## Dataset\n",
-    "Voy a utilizar el mismo dataset elegido en el desafío anterior.\n"
+    "Voy a utilizar el mismo dataset elegido en el desafío anterior. Es decir un conjunto de recetas de cocina.\n"
    ]
   }
  ],
