--- a/Desafio 3/desafio_3_modelo_lenguaje_natural_char.ipynb
+++ b/Desafio 3/desafio_3_modelo_lenguaje_natural_char.ipynb
@@ -1556,6 +1556,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Conclusiones finales\n",
+    "1. Encontré que el costo computacional del entrenamiento del modelo es muy alto. Considerando que limité bastante el número de recetas, en un ambiente productivo, no lo veo óptimo para su uso. Esto se repite tanto como en el modelo de word como este, aunque aquí, al procesar por caracteres, se refuerza esta problemática.\n",
+    "\n",
+    "2. En cuanto a la predicción de secuencias, noto que las primeras palabras tienen sentido, no así si intentamos predecir una cadena más larga, en donde, a pesar de encontrar palabras del idioma inglés (las recetas están escritas en dicho idioma), se va perdiendo el sentido de la oración, por ej: \"add salt to the pasta into the pasta into the\".\n",
+    "\n",
+    "3. Utilizando beam search y muestreo aleatorio, y a pesar de la simplesa del algoritmo y que limité el número de recetas, encuentro que las secuencia sugerencias tienen un léxico coherente, en cuanto a la semántica, tal vez falla en algunas, por ejemplo, uno no agrega sal dentro del horno, pero sí se lo hace con un pollo (predicción correcta encontrada por el modelo también)\n",
+    "\n",
+    "4. Comparando el modelo por palabras y por caracter, considero que, aunque no con grandes diferencias, el modelo por caracter tienen mejor accuracy, analizándolo semánticamente, es decir revisando si la salida de las predicciones tienen sentido en el contexto de las recetas de cocina.\n",
+    "\n",
+    "## Próximos pasos\n",
+    "Al igual que mencioné en el modelo por palabras, para realizar un mejor análisis, se podría usar Optuna u algún otro framework de evaluación de hiperparámetros, para ir \"jugando\" con los diferentes hiperparámetros, por una cuestión de tiempo de procesamiento y costo de GPU, no lo implementé, pero sí sería necesario en caso que en mi TP final quiera aplicar algo de esta temática."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
