Listo para corregir

--- a/Desafio 3/desafio_3_modelo_lenguaje_natural_char.ipynb
+++ b/Desafio 3/desafio_3_modelo_lenguaje_natural_char.ipynb
@@ -1567,7 +1567,9 @@
     "4. Comparando el modelo por palabras y por caracter, considero que, aunque no con grandes diferencias, el modelo por caracter tienen mejor accuracy, analizándolo semánticamente, es decir revisando si la salida de las predicciones tienen sentido en el contexto de las recetas de cocina.\n",
     "\n",
     "## Próximos pasos\n",
-    "Al igual que mencioné en el modelo por palabras, para realizar un mejor análisis, se podría usar Optuna u algún otro framework de evaluación de hiperparámetros, para ir \"jugando\" con los diferentes hiperparámetros, por una cuestión de tiempo de procesamiento y costo de GPU, no lo implementé, pero sí sería necesario en caso que en mi TP final quiera aplicar algo de esta temática."
+    "1. Al igual que mencioné en el modelo por palabras, para realizar un mejor análisis, se podría usar Optuna u algún otro framework de evaluación de hiperparámetros, para ir \"jugando\" con los diferentes hiperparámetros, por una cuestión de tiempo de procesamiento y costo de GPU, no lo implementé, pero sí sería necesario en caso que en mi TP final quiera aplicar algo de esta temática.\n",
+    "\n",
+    "2. Adicionalemente, una actividad interesante, sería comparar estos resultados, con modelos más complejos que fuimos viendo en nuevas clases de la materia."
    ]
   },
   {
