--- a/Desafio 3/desafio_3_modelo_lenguaje_natural_word.ipynb
+++ b/Desafio 3/desafio_3_modelo_lenguaje_natural_word.ipynb
@@ -1662,8 +1662,12 @@
     "\n",
     "4. Tuve que agregar un dropout porque a partir de la época 8/10 comenzaba a tener un gran overfitting, esto no solo hizo que el overfitting disminuyera notablemente sino que mejoró la calida de la respuesta (semánticamente, es decir el el sentido de las frases en el contexto de las recetas).\n",
     "\n",
+    "5. Adicionalmente, probé con diferentes criterios del tamaño de secuencia, siendo el del percentile, el que me funcionó mejor.\n",
+    "\n",
     "## Próximos pasos\n",
-    "Para realizar un mejor análisis, se podría usar Optuna, para ir \"jugando\" con los diferentes hiperparámetros, por una cuestión de tiempo de procesamiento y costo de GPU, no lo implementé, pero sí sería necesario en caso que en mi TP final quiera aplicar algo de esta temática."
+    "1. Para realizar un mejor análisis, se podría usar Optuna, para ir \"jugando\" con los diferentes hiperparámetros, por una cuestión de tiempo de procesamiento y costo de GPU, no lo implementé, pero sí sería necesario en caso que en mi TP final quiera aplicar algo de esta temática.\n",
+    "\n",
+    "2. Adicionalemente, una actividad interesante, sería comparar estos resultados, con modelos más complejos que fuimos viendo en nuevas clases de la materia."
    ]
   }
  ],
