--- a/Desafio 3/Desafio_3.ipynb
+++ b/Desafio 3/Desafio_3.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Desafío 3\n",
     "\n",
-    "# En Desarrollo\n",
+    "# ¡Listo para corregir!\n",
     "\n",
     "\n",
     "## Alumno\n",
@@ -23,7 +23,11 @@
     "Fue dividido en 2 notebooks para facilitar su lectura y correción.\n",
     "\n",
     "## Dataset\n",
-    "Voy a utilizar el mismo dataset elegido en el desafío anterior. Es decir un conjunto de recetas de cocina.\n"
+    "Voy a utilizar el mismo dataset elegido en el desafío anterior. Es decir un conjunto de recetas de cocina.\n",
+    "\n",
+    "\n",
+    "# Código base\n",
+    "Para ambos sub-desafios, me basé en el código entregado por el titular de la cátedra, realizando las modificaciones que consideré pertinentes, aunque fue un buen punto de partida para comenzar.\n"
    ]
   }
  ],
