--- a/Desafio 2/desafio_2.ipynb
+++ b/Desafio 2/desafio_2.ipynb
@@ -8029,7 +8029,7 @@
     "\n",
     "fig = px.scatter_3d(x=vecs[:MAX_WORDS,0], y=vecs[:MAX_WORDS,1], z=vecs[:MAX_WORDS,2],text=labels[:MAX_WORDS])\n",
     "fig.update_traces(marker_size = 2)\n",
-    "fig.show() # esto para plotly en colab"
+    "fig.show() # esto para plotly en colab\n"
    ]
   },
   {
