--- a/Desafio 2/desafio_2.ipynb
+++ b/Desafio 2/desafio_2.ipynb
@@ -31,7 +31,7 @@
    },
    "source": [
     "### Objetivo\n",
-    "El objetivo es utilizar documentos / corpus para crear embeddings de palabras basado en ese contexto. Se utilizará canciones de bandas para generar los embeddings, es decir, que los vectores tendrán la forma en función de como esa banda haya utilizado las palabras en sus canciones."
+    "El objetivo es utilizar documentos / corpus para crear embeddings de palabras basado en ese contexto. Se utilizará recetas de cocinas para generar los embeddings, es decir, que los vectores tendrán la forma en función de como esa banda haya utilizado las palabras en sus canciones."
    ]
   },
   {
